--- a/package.json
+++ b/package.json
@@ -18,10 +18,26 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "admin-bro": "^4.0.1",
+    "admin-bro-expressjs": "^2.1.1",
+    "admin-bro-mongoose": "^0.5.2",
+    "bcryptjs": "^2.4.3",
+    "handlebars": "^4.7.7",
+    "handlebars-layouts": "^3.1.4",
+    "helmet": "^5.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.1",
+    "nodemailer": "^6.7.7",
+    "nodemon": "^2.0.19",
+    "randomstring": "^1.2.2",
+    "request": "^2.88.2",
     "rxjs": "~7.5.0",
+    "sendmail": "^1.6.1",
     "smart-webcomponents": "^14.0.0",
     "smart-webcomponents-angular": "^14.0.87",
     "tslib": "^2.3.0",
+    "underscore": "^1.13.4",
+    "winston": "^3.8.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
